(lang dune 3.4)

(name edsger)

(generate_opam_files true)

(source
 (github nikgalanop/edsger))

(authors "Nikolas Galanopoulos" "Odyssefs Vangelatos")

(maintainers "Maintainer Name")

(license LICENSE)

(documentation https://url/to/documentation)

(package
 (name edsger)
 (synopsis "A short synopsis")
 (description "A longer description")
 (depends ocaml dune menhir llvm)
 (tags
  (topics "to describe" your project)))

(using menhir 2.1)
; See the complete stanza docs at https://dune.readthedocs.io/en/stable/dune-files.html#dune-project
