(lang dune 3.4)

(name edsger)

(generate_opam_files true)

(source
 (github nikgalanop/edsger))

(authors "Nikolas Galanopoulos" "Odyssefs Vangelatos")

(maintainers "Nikolas Galanopoulos" "Odyssefs Vangelatos")

(license LICENSE)

(documentation https://url/to/documentation)

(package
 (name edsger)
 (synopsis "A compiler for the Edsger programming language.")
 (description "A compiler for the Edsger programming language.")
 (depends ocaml dune menhir llvm)
 (tags
  (ocaml llvm menhir dune compiler edsger)))

(using menhir 2.1)
; See the complete stanza docs at https://dune.readthedocs.io/en/stable/dune-files.html#dune-project
